--- a/index/02-chap2.Rmd
+++ b/index/02-chap2.Rmd
@@ -89,7 +89,7 @@ As BMI is associated with increased rates of thrombotic events and platelets are
 ## Experimental techniques to measure platelet function {#platelet-function-techniques}
 Platelet function can be measured by various laboratory techniques and are useful at characterising features of normal platelet function, and how pltelet function may be changed in certain disease states. Light transmission aggregometry (LTA) quantifies platelet aggregation by how much light passes through the sample. The more aggregation, the clearer the solution and the more light passes through and is detected[@Born1962]. LTA is considered the gold standard, however there are other techniques which can measure platelet aggregation. Plate aggregation uses the same principles as LTA, however a 96 well plate is used instead of using larger cuvettes, along with a plate reader[@Chan2018]. This allows less sample and therefore more conditions to be assessed, thereby allowing full concentration response curves to be derived using various platelet agonists. More recent techniques have been developed which utilise electrodes to quantify aggregation such as Multiple Electrode Aggregometry (MEA)[@Toth2006]. This technique uses four electrodes and measures aggregation in whole blood by using impedance aggregometry. The readings from MEA, unlike LTA, are more affected by the platelet count, where a higher platelet count causes more aggregation[@Toth2006].
 
-Other techniques routinely used include using flow cytometry. Measuring resting levels of receptors using fluorescently labelled antibodies provides information about the function of the platelet[@Hu2017]. Some receptors change conformation and become exposed in response to platelet agonists (such as the integrin α~IIb~β~3~). The adhesion receptor P-selectin is stored in α-granules and becomes rapidly expressed on the platelet plasma membrane in response to agonist stimulation. Such platelet agonists include as protease-activating receptor activating peptide 1 (PAR1-AP), adenosine diphosphate (ADP) and collagen-related peptide (CRP). Another technique which can provide useful information about platelets is measuring calcium mobilisation by using a fluorescent calcium indicator. Activation of various receptors causes downstream activation of phospholipase C (PLC). In turn, PLC produces inositol-1,4,5-trisphosphate (IP~3~), thereby releasing calcium from the intracellullar stores via IP~3~ receptors (IP~3~-R) in the endoplasmic reticulum[@Varga-Szabo2009]. Another marker of platelet activation and coagulation is phosphatidylserine (PS) exposure. Under basal conditions, PS is mainly present in the inner leaflet of the phospholipid bilayer. Upon activation (e.g. by dual stimulation using collagen and thrombin), the PS is becomes exposed on the outer surface of the membrane, thereby providing a binding site for factor Xa (FXa) and thus fibrin formation[@Bevers1983]. Therefore PS reflects the  Changes in PS exposure can be measured using a fluorescently labelled antibody.
+Other techniques routinely used include using flow cytometry. Measuring resting levels of receptors using fluorescently labelled antibodies provides information about the function of the platelet[@Hu2017]. Some receptors change conformation and become exposed in response to platelet agonists (such as the integrin α~IIb~β~3~). The adhesion receptor P-selectin is stored in α-granules and becomes rapidly expressed on the platelet plasma membrane in response to agonist stimulation. Such platelet agonists include protease-activating receptor activating peptide 1 (PAR1-AP), adenosine diphosphate (ADP) and collagen-related peptide (CRP). Another technique which can provide useful information about platelets is measuring calcium mobilisation by using a fluorescent calcium indicator. Activation of various receptors causes downstream activation of phospholipase C (PLC). In turn, PLC produces inositol-1,4,5-trisphosphate (IP~3~), thereby releasing calcium from the intracellullar stores via IP~3~ receptors (IP~3~-R) in the endoplasmic reticulum[@Varga-Szabo2009]. Another marker of platelet activation and coagulation is phosphatidylserine (PS) exposure. Under basal conditions, PS is mainly present in the inner leaflet of the phospholipid bilayer. Upon activation (e.g. by dual stimulation using collagen and thrombin), the PS becomes exposed on the outer surface of the membrane, thereby providing a binding site for factor Xa (FXa) and thus fibrin formation[@Bevers1983]. Changes in PS exposure can be measured using a fluorescently labelled antibody.
 
 (ref:scaption-platelet-diagram-background) Cartoon of integrin α~IIb~β~3~ activation, P-selectin expression and platelet-leukocyte interactions
 
@@ -99,7 +99,7 @@ Other techniques routinely used include using flow cytometry. Measuring resting 
 include_graphics(path = "figure/Bariatric_study/Platelet_activiation_integrin_p-selectin.png", dpi = NA)
 ```
 
-As well as platelets aggregating to one another, platelets are also able to bind to leukocytes such as neutrophils. These interactions are important for neutrophil localization for inflammatory responses, leukocyte phagocytosis, generation of neutrophil extracellular traps (NETs) as well as in the activation of coagulation[@Lisman2018]. When activated, platelets express P-selectin. Neutrophils express P-selectin glycoprotein ligand-1 (PSGL-1)[@Zarbock2007] (Figure \@ref(fig:platelet-activation-background)), the receptor for P-selectin, therefore these cells can form aggregates through these adhesion receptors. The extent of these interactions can also be used to measure platelet activation. This can be done under basal conditions or after stimulation with an agonist such as CRP. Firstly, neutrophils are gated based on their forward scatter (FSC) and using an antibody for the leukocyte common antigen (CD45)[@Gerrits2016]. An antibody for the platelet receptor CD41 (integrin α~IIb~) is then used to detect the proportion of neutrophils bound to platelets. 
+As well as platelets aggregating to one another, platelets are also able to bind to leukocytes such as neutrophils. These interactions are important for neutrophil localization for inflammatory responses, leukocyte phagocytosis, generation of neutrophil extracellular traps (NETs) as well as in the activation of coagulation[@Lisman2018]. When activated, platelets express P-selectin. Neutrophils express P-selectin glycoprotein ligand-1 (PSGL-1)[@Zarbock2007] (Figure \@ref(fig:platelet-activation-background)), the receptor for P-selectin, therefore these cells can form aggregates through these adhesion receptors. The extent of these interactions can also be used to measure platelet activation. This can be done under basal conditions or after stimulation with an agonist such as CRP. Firstly, neutrophils are gated based on their side scatter (SSC) and using an antibody for the leukocyte common antigen (CD45)[@Gerrits2016]. An antibody for the platelet receptor CD41 (integrin α~IIb~) is then used to detect the proportion of neutrophils bound to platelets. 
 
 Techniques such as Western Blotting can be used to quantify the levels of total protein or phosphoprotein. This can therefore be used to explore changes in signalling in platelets under basal conditions, or after stimulation with agonists or antagonists. PGE1 acts at a G~s~-coupled prostaglandin G protein coupled receptor (GPCR), which activates adenylyl cyclase and leads to subsequent production of cAMP[@Braune2020]. Protein kinase A (PKA) subsequently phosphorylates the vasodilator-stimulator phosphoprotein (VASP) at sites including Ser^157^ and Ser^239^[@Hezard2005]. Phosphorylation of VASP has been shown to inhibit integrin α~IIb~β~3~ activation, thereby suppressing platelet activity[@Horstrup1994]. The P2Y~12~ receptor is coupled to G~i/o~, therefore the P2Y~12~ agonist ADP opposes the effects of PGE1. Measuring phosphorylation of VASP at these sites is used as an indicator of how well P2Y~12~ antagonists are inhibiting platelets. The inability to reduce PGE1-mediated VASP phosphorylation by ADP indicates more inhibition by drugs such as clopidogrel and ticagrelor[@Hezard2005].
 
