--- a/index/04-chap4.Rmd
+++ b/index/04-chap4.Rmd
@@ -61,7 +61,7 @@ All participants provided written informed consent. Patients, who were due to un
 Blood was taken by venipuncture into vacutainers containing sodium citrate (3.2%). Blood was centrifuged (1000 RPM, 17 mins). PRP was diluted 1:40 in HEPES Tyrode's (145 mM NaCl, 3 mM KCl, 0.5 mM Na~2~HPO~4~, 1 mM MgS0~4~.7H~2~O, 10 mM HEPES, pH 7.4, 0.1% [w/v] D‐glucose) for experiments where indicated. 
 
 ### Platelet lysates 
-ACD (1:7) and apyrase (0.02 U/mL) were added  to PRP. PRP was centrifuged (1700 RPM, 10 mins) to pellet platelets. Platelets were resuspended in CGS buffer (120 mM NaCl, 25.8 mM sodium citrate dihydrate, 0.1% [w/v] D‐glucose, 0.02 U/mL apyrase, pH 6.5) Platelets were centrifuged again (1700 RPM, 10 mins) to pellet platelets and were resuspended in CGS buffer. Platelets were pelleted and resuspended in radioimmunoprecipitation assay buffer (RIPA: 25 mM HEPES, 200 mM NaCL, 1mM EDTA, 1 % (v/v) NP40, 0.5 % (w/v) sodium deoxychelate, 0.1 % (w/v) SDS) supplemented with a protease and phosphatase inhibitor for 10 minutes on ice. Lysates were centrifuged (10000 RPM, 4°C for 5 minutes). Supernatant was removed and a bicinchoninic acid (BCA) assay was performed to calculate sample protein concentrations. Samples were stored in a -80°C freezer until proteomics analysis. 
+ACD (1:7) and apyrase (0.02 U/mL) were added  to PRP. PRP was centrifuged (1700 RPM, 10 mins) to pellet platelets. Platelets were resuspended in CGS buffer (120 mM NaCl, 25.8 mM sodium citrate dihydrate, 0.1% [w/v] D‐glucose, 0.02 U/mL apyrase, pH 6.5). Platelets were centrifuged again (1700 RPM, 10 mins) to pellet platelets and were resuspended in CGS buffer. Platelets were pelleted and resuspended in radioimmunoprecipitation assay buffer (RIPA: 25 mM HEPES, 200 mM NaCL, 1mM EDTA, 1 % (v/v) NP40, 0.5 % (w/v) sodium deoxychelate, 0.1 % (w/v) SDS) supplemented with a protease and phosphatase inhibitor for 10 minutes on ice. Lysates were centrifuged (10000 RPM, 4°C for 5 minutes). Supernatant was removed and a bicinchoninic acid (BCA) assay was performed to calculate sample protein concentrations. Samples were stored in a -80°C freezer until proteomics analysis. 
 
 ### Platelet parameters measured by Sysmex
 Citrated whole blood (200 uL) was analysed using the Sysmex XN-20 haematology analyser. Platelet readouts were platelet count (PLT) (x 10^9^/L), immature platelet fraction (IPF) (%), immature platelet count (IPC) (x 10^9^/L), side fluorescence (SFL, a measure of mRNA content in relative fluorescent units/RFUs), forward scatter (FSC, a measure of platelet size measured in RFUs) and side scatter (SSC, a measure of granularity in RFUs).
@@ -82,7 +82,7 @@ Citrated whole blood was diluted 1:10 in HEPES-Tyrode's buffer. Diluted blood wa
 TMT-MS was performed by the Proteomics facility at the University of Bristol. Platelet lysate samples (50 ug total protein) were digested with trypsin, then labelled with TMT 15 plex reagents (ThermoFisher Scientific, Loughborough, UK). Labelled samples were pooled to create a reference then they were evaporated to dryness. Samples were resuspended in formic acid (5%). The pooled sample was then desalted. This was done using a SepPak cartridge (Waters, Milford, Massachussetts, USA). The solution from the SepPak cartridge was evaporated to dryness. Following this step and before fractionation the eluate was resuspended using high pH reversed-phase chromatography. The system used was the Ultimate 3000 liquid chromatography system (Thermo Fisher Scientific). Further fractionation occurred using high pH RP fractions using the Ultimate 3000 nano-LC system with an Orbitrap Fusion Tribrid Mass Spectrometer (ThermoFisher Scientific). Further details of the methods used for mass spectrometry within the proteomics facility have been previously published[@Durrant2020].
 
 ### Statistical analysis for platelet function assays
-Data was analysed using GraphPad Prism 8. All data points are presented where possible to be fully transparent. If data displayed a normal distribution (based on Shapiro-Wilk p-value and W statistic), a parametric test was used (e.g. unpaired t-test or one way ANOVA), otherwise a nonparametric test was used. Concentration-response curves were plotted using a four parameter variable slope. To compare concentration-response curve parameters, pEC50s or curve maxes were compared. A Fisher's exact test was used to compare proportions of categorical variables. Statistical tests used for each experiment are provided in figure legends. P-values for results are presented throughout, however these were not dichotomised as either 'significant' or 'not significant'[@Sterne2001] as the current study has low power and the groups are unlikely to be representative of the respective populations. A P-value threshold of 0.05 may therefore not be appropriate in this case.  
+Data was analysed using GraphPad Prism 8. All data points are presented where possible to be fully transparent. If data displayed a normal distribution (based on Shapiro-Wilk p-value and W statistic), a parametric test was used (e.g. unpaired t-test or one way ANOVA), otherwise a nonparametric test was used. Concentration-response curves were plotted using a four parameter variable slope. To compare concentration-response curve parameters, pEC50s or curve maxes were compared. A Fisher's exact test was used to compare proportions of categorical variables. Statistical tests used for each experiment are provided in figure legends. P-values for results are presented throughout, however these were not dichotomised as either 'significant' or 'not significant'[@Sterne2001] as the current study has low power and the groups are unlikely to be fully representative of the respective populations. A P-value threshold of 0.05 may therefore not be appropriate in this case.  
 
 ### Analysis of proteomic data
 A principal component analysis (PCA) was performed to reduce the data and to identify major axes (principal components, PCs). This method helps to determine whether the major axes of the data can likely be explained by the group (bariatric patient with obesity or control participant). Normalised protein abundances were log~2~ transformed, where the logFC was calculated by subtracting the log~2~ normalised protein abundance of the control subjects from the bariatric surgery group. The log~2~ normalised protein abundances of bariatric patients were compared to controls using a two-tailed unpaired t-test. P-values were not adjusted for multiple testing, due to the observation that false discovery rate (FDR) adjustment may be too blunt in low power proteomics experiments[@Pascovici2016]. P-values of all comparisons are provided in the supplementary results in Chapter \@ref(BMI-platelets-clinic). (FDR) adjusted p-values are also provided in the full results as a reference. A positive logFC indicates an increase in protein level in the bariatric samples.
@@ -227,7 +227,7 @@ The principal component analysis of the proteomic data suggested that PC4 was ab
    landscape()
 ```
 
-Evidence from the current study and results from Barrachina et al[@Barrachina2019]. point towards platelet proteins which may be altered with obesity such as actin, gelsolin and septin-2. Actin is important in platelet shape change and activation[@Bearer2002; @Barrachina2019]. Higher actin levels in platelets from patients with obesity could contribute to platelet hyperactivity. Mutations in the gene which encodes actin (ACTB) can cause Baraitser-Winter cerebrofrontofacial syndrome (BWCFF). Patients with this syndrome have been reported to have a low platelet count (thrombocytopenia) with enlarged platelets and a higher immature platelet fraction[@Latham2018]. This actinopathy is known as ACTB-associated syndromic thrombocytopenia. It is therefore possible that increased levels of actin may be indicative of more newly produced platelets. Gelsolin is another platelet cytoskeletal protein, which was lower in the bariatric patient group. Gelsolin levels were shown to be lower in PRP from patients with stable angina pectoralis compared with controls, however they were higher in patients with unstable angina pectoralis and acute myocardial infarction patients[@Yue2011]. Recombinant human gelsolin has been shown to be protective against thromboembolism in mice, thereby suggesting that reduced levels seen in the current study could increase thrombosis risk[@Gupta2019]. Septins are cytosolic proteins which are also reported to be important in integrin α~IIb~β~3~ activation, platelet spreading and clot contraction[@Kim2020]. Septin-2 levels were higher in platelets from bariatric patients, suggesting this may lead to increased platelet activation. Although no difference was found in α~IIb~β~3~ activation, it would be useful to explore whether there are differences in platelet aggregation and platelet spreading.
+Evidence from the current study and results from Barrachina et al.[@Barrachina2019] point towards platelet proteins which may be altered with obesity such as actin, gelsolin and septin-2. Actin is important in platelet shape change and activation[@Bearer2002; @Barrachina2019]. Higher actin levels in platelets from patients with obesity could contribute to platelet hyperactivity. Mutations in the gene which encodes actin (ACTB) can cause Baraitser-Winter cerebrofrontofacial syndrome (BWCFF). Patients with this syndrome have been reported to have a low platelet count (thrombocytopenia) with enlarged platelets and a higher immature platelet fraction[@Latham2018]. This actinopathy is known as ACTB-associated syndromic thrombocytopenia. It is therefore possible that increased levels of actin may be indicative of more newly produced platelets. Gelsolin is another platelet cytoskeletal protein, which was lower in the bariatric patient group. Gelsolin levels were shown to be lower in PRP from patients with stable angina pectoralis compared with controls, however they were higher in patients with unstable angina pectoralis and acute myocardial infarction patients[@Yue2011]. Recombinant human gelsolin has been shown to be protective against thromboembolism in mice, thereby suggesting that reduced levels seen in the current study could increase thrombosis risk[@Gupta2019]. Septins are cytosolic proteins which are also reported to be important in integrin α~IIb~β~3~ activation, platelet spreading and clot contraction[@Kim2020]. Septin-2 levels were higher in platelets from bariatric patients, suggesting this may lead to increased platelet activation. Although no difference was found in α~IIb~β~3~ activation, it would be useful to explore whether there are differences in platelet aggregation and platelet spreading.
 
 There is also overlap between platelet proteins altered with BMI in the current study and platelet transcripts that are reported to be altered with higher BMI[@Freedman2010]. For example, S100A9 (Myeloid-related protein-14 or MRP-14) transcripts were altered with BMI and the levels of the protein were increased in the bariatric group in the current study. Studies in mice have found evidence that S100A9 is involved in thrombus formation[@Wang2014a], and there is evidence for its involvement in myocardial infarction[@Cai2020]. Likewise, myeloperoxidase (MPO) transcripts were associated with BMI and there were higher protein levels in bariatric patients with obesity. A previous study has shown evidence that MPO can potentiate ADP-induced platelet aggregation in PRP[@Gorudko2013].
 
