--- a/index/05-chap5.Rmd
+++ b/index/05-chap5.Rmd
@@ -75,7 +75,7 @@ PRP supplemented with apyrase was used. For each donor, the platelet count was r
 Washed platelets were used at a concentration of 2 x 10^7^/mL. Platelets were preincubated with vehicle, 200 ng/mL MDC or 200 ng/mL TARC for 5 mins. Platelets were then stimulated 5 ug/mL CRP as well as increasing concentrations of thrombin for 10 mins. PE-conjugated annexin V (1:10 v/v) was used to bind to PS. Plates were read using the BD Accuri flow cytometer, where the % positive (annexin V) were recorded.
 
 ### Flow cytometry: phospho-VASP
-Washed platelets were diluted to a concentration of 1 x 10^8^/mL. Platelets were left to rest in a 96 well plate for 2 minutes to warm to 37 °C. 200 ng/ml MDC, 200 ng/mL TARC, 10 µM ADP or vehicle were preincubated with platelets for 5 mins at 37 °C. PGE1 (concentration-response curve) was added for a further 5 minutes. Platelets were fixed with 1 % PFA for 10 minutes. Platelets were centrifuged in a 96 well plate at 2651 rpm for 10 minutes (Heraeus Megafuge with M-20 Microplate Swinging Bucket Rotor, ThermoFisher Scientific). Supernatant was then discarded, and platelets were permeabilized with 0.1% TritonTM X-100 for 10 minutes. The plate was centrifuged again at 2651 rpm for 10 minutes. Supernatant was discarded and platelets were washed and resuspended in 1 x PBS. Platelets were centrifuged at 2651 rpm for 10 minutes. Supernatant was discarded and platelets were resuspended with rabbit pSer157 VASP primary antibody (1 in 1000) for 30 minutes on ice. Platelets were centrifuged at 2651 rpm for 10 minutes. Supernatant was discarded and platelets were washed and resuspended with 1 x PBS. Platelets were centrifuged at 2651 rpm for 10 minutes. Supernatant was discarded and platelets were resuspended with secondary antibody (Alexa Fluor™ 647 anti-rabbit IgG, 1 in 1000) for 45 minutes on ice. Platelets were centrifuged at 2651 RPM for 10 minutes. Supernatant was discarded and platelets were washed with 1 x PBS. Platelets were centrifuged once more at 2651 rpm for 10 minutes, resuspended once more in 1 x PBS and the plate was read using a BD Accuri C6 Plus flow cytometer and using the APC-A channel.
+Washed platelets were diluted to a concentration of 1 x 10^8^/mL. Platelets were left to rest in a 96 well plate for 2 minutes to warm to 37 °C. 200 ng/ml MDC, 200 ng/mL TARC, 10 µM ADP or vehicle were preincubated with platelets for 5 mins at 37 °C. PGE1 (concentration-response curve) was added for a further 5 minutes. Platelets were fixed with 1 % PFA for 10 minutes. Platelets were centrifuged in a 96 well plate at 2651 RPM for 10 minutes (Heraeus Megafuge with M-20 Microplate Swinging Bucket Rotor, ThermoFisher Scientific). Supernatant was then discarded, and platelets were permeabilized with 0.1% TritonTM X-100 for 10 minutes. The plate was centrifuged again at 2651 RPM for 10 minutes. Supernatant was discarded and platelets were washed and resuspended in 1 x PBS. Platelets were centrifuged at 2651 RPM for 10 minutes. Supernatant was discarded and platelets were resuspended with rabbit pSer157 VASP primary antibody (1 in 1000) for 30 minutes on ice. Platelets were centrifuged at 2651 RPM for 10 minutes. Supernatant was discarded and platelets were washed and resuspended with 1 x PBS. Platelets were centrifuged at 2651 RPM for 10 minutes. Supernatant was discarded and platelets were resuspended with secondary antibody (Alexa Fluor™ 647 anti-rabbit IgG, 1 in 1000) for 45 minutes on ice. Platelets were centrifuged at 2651 RPM for 10 minutes. Supernatant was discarded and platelets were washed with 1 x PBS. Platelets were centrifuged once more at 2651 RPM for 10 minutes, resuspended once more in 1 x PBS and the plate was read using a BD Accuri C6 Plus flow cytometer and using the APC-A channel.
 
 ### Western blotting
 Platelets were used at a concentration of 4 x 10^8^/mL. Platelets were preincubated with 200ng/mL MDC, 200ng/mL TARC or vehicle for 5 minutes followed by 5 minutes application of PAR1-AP (all at 30 °C). For phospho-VASP assay, MDC, TARC or ADP were preincubated with platelets for 5 minutes, with PGE1 added for a further 5 minutes. Platelets were lysed with 4 X LDS NuPAGE sample buffer supplemented with 50 mM dithiothreitol (DTT). Samples were stored at -20 °C. Samples were heated to 70 °C for 10 minutes prior to SDS-PAGE. A 10 % Resolving gel was cast for Tris-glycine SDS-polyacrylamide gel electrophoresis, and a 5 % Stacking gel was cast for loading. As a standard, 4 µl Precision Plus protein pre-stained standard was loaded, along with 20 µl of the lysate sample. The samples were placed in a tank containing 4-morpholinepropanesulfonic acid (MOPS) running buffer (50 mm MOPS, 50 mm Tris, 1 mm EDTA, 0.1% SDS, 5 mm sodium bisulfite) and protein electrophoresis was carried out for 90 minutes at 100 V. Following this, proteins were transferred to a poly(vinylidene fluoride) (PDVF) membrane in the presence of transfer buffer (25 mM Tris-HCl (pH 7.6), 192 mM glycine, 20% methanol) for 60 minutes and at 100 V. The membrane was then incubated in LI-COR blocking buffer with 0.1 % TBS-Tween in a 1:1 ratio for 1 hour. Membranes were incubated with the primary antibody (1 in 1000 dilution) at room temperature overnight. Talin was used as a loading control. The membrane was washed 3 times with 0.1 % TBS-Tween for 5 minutes. The membrane was incubated with Fluor680 labelled secondary antibody (1 in 5000 dilution) for 1 hour. The membrane was washed 6 times for 5 minutes, then membranes were scanned using the LI-COR Odyssey® CLx Imaging System. Bands were quantified using Image Studio Lite. 
@@ -87,7 +87,7 @@ Fura-2 (4 µM) was added to PRP after the addition of indomethacin and apyrase a
 Data was analysed using GraphPad Prism 8. If data displayed a normal distribution (based on Shapiro-Wilk p-value and W statistic), a parametric test was used (e.g. unpaired t-test or one way ANOVA), otherwise a nonparametric test was used. Concentration-response curves were plotted using a four parameter variable slope. To compare concentration-response curve parameters, pEC50s or curve maxes were compared. A Fisher's exact test was used to compare proportions of categorical variables. Statistical tests used for each experiment are in figure legends. Strength of evidence is determined by p-values, however results will not be dichotomised as either 'significant' or 'not significant'[@Sterne2001]. 
 
 ### Two sample MR look-up using EpigrahDB
-Mendelian randomisation is a method which uses genetic variants as instrumental variables to provide a causal estimate of the relationship between a modifiable exposure and health outcome[@Davies2018]. Two sample MR uses summary statistics and allows for causal effects to be estimated where the exposure and outcome are measured in different populations[@Davies2018]. EpigraphDB is a tool which performs two sample MR to determine how the human proteome contributes to complex diseases[@Zheng2020]. Protein quantitative trait loci (pQTLs) were available for MDC and TARC from the INTERVAL study (N=3301), which were rank normal transformed[@Sun2018]. Therefore a systematic exploration of the possible roles of MDC and TARC in disease was performed. These SNPs were associated with these proteins at p<5x10^-8^. GWAS summary statistics that were publically available for disease outcomes were included. A list of the available outcomes are presented on EpigraphDB https://www.epigraphdb.org/pqtl/list/outcomes. As an example, the venous thromboembolism variables were from Neale lab: https://github.com/Nealelab/UK_Biobank_GWAS). The venous thromboembolism (VTE) units are derived from a case/control linear mixed model. For MDC, there was one instrument available, therefore a Wald ratio was used to estimate the causal effect[@Lawlor2008]. There were two instruments available for TARC, therefore the inverse variance weighted (IVW) method was used, which assumes all genetic variants are valid instrumental variables[@Burgess2013]. The pQTLs used were trans pQTLs(located >500 kb from the leading pQTL). The instruments used were categorised as Tier 1 instruments, which passed both pleiotropy and consistency tests[@Zheng2020]. As a total of 225 outcomes were searched, a Bonferroni-adjusted p-value of 0.05/225 = 2.2x10^-4^ was utilised to account for multiple testing.
+Mendelian randomisation is a method which uses genetic variants as instrumental variables to provide a causal estimate of the relationship between a modifiable exposure and health outcome[@Davies2018]. Two sample MR uses summary statistics and allows for causal effects to be estimated where the exposure and outcome are measured in different populations[@Davies2018]. EpigraphDB is a tool which performs two sample MR to determine how the human proteome contributes to complex diseases[@Zheng2020]. Protein quantitative trait loci (pQTLs) were available for MDC and TARC from the INTERVAL study (N=3301), which were rank normal transformed[@Sun2018]. Therefore a systematic exploration of the possible roles of MDC and TARC in disease was performed. These SNPs were associated with these proteins at p<5x10^-8^. GWAS summary statistics that were publically available for disease outcomes were included. A list of the available outcomes are presented on EpigraphDB https://www.epigraphdb.org/pqtl/list/outcomes. As an example, the venous thromboembolism variables were from Neale lab: https://github.com/Nealelab/UK_Biobank_GWAS). The venous thromboembolism (VTE) units are derived from a case/control linear mixed model. For MDC, there was one instrument available, therefore a Wald ratio was used to estimate the causal effect[@Lawlor2008]. There were two instruments available for TARC, therefore the inverse variance weighted (IVW) method was used, which assumes all genetic variants are valid instrumental variables[@Burgess2013]. The pQTLs used were trans pQTLs (located >500 kb from the leading pQTL). The instruments used were categorised as Tier 1 instruments, which passed both pleiotropy and consistency tests[@Zheng2020]. As a total of 225 outcomes were searched, a Bonferroni-adjusted p-value of 0.05/225 = 2.2x10^-4^ was utilised to account for multiple testing.
 
 ## Results
 
