--- a/index/07-chap7.Rmd
+++ b/index/07-chap7.Rmd
@@ -255,9 +255,9 @@ column_spec(4, width = "8cm") %>%
 
 This study also provides some novel proteins associated with a reduction in BMI including SCAR5, chondroadherin (CHAD), fumarylacetoacetase (FAAA) and  aminoacylase-1. A reduction in BMI led to an increase in plasma levels of SCAR5. This protein is involved in mediating commitment of mesenchymal stem cells into adipocytes and is highly expressed in white adipose tissue (WAT)[@Lee2017a]. A reduction in BMI also increased levels of chondroadherin (CHAD). Chondroadherin is a protein which is important in regulating exctracellular matrix organisation in cartilage and bones[@Hessle2013; @Iozzo2015]. CHAD knockout mice show decreased bone strength compared with wildtype[@Hessle2013]. This suggests that weight reduction may be beneficial for bone strength. The function of these proteins and relationship with adiposity needs to be further characterised.
 
-The effect of BMI on specific platelet-related proteins was explored by extracting the estimates for proteins involved in platelet GO pathways. Both analyses indicated that a reduction in BMI reduces the levels of collagen type III. Collagen activates platelets by binding to receptors such as the GPVI receptor, therefore this reduction may reduce platelet activation[@Maurice2006]. The instrumental variable analysis detected an effect of BMI change on PAFAH. Here, a reduction in BMI led to higher levels of PAFAH. This platelet protein was detected in Chapter \@ref(BMI-protein-MR). PAFAH is protein which has been shown to bind to lipoproteins, thereby reducing their oxidation[@Noto2003]. The comparison across studies will be discussed further in Chapter \@ref(Comparison-proteome). The chemokines utilised in Chapter \@ref(chemokine-platelets), MDC and TARC, were included in the SomaLogic panel, therefore were also specifically looked up within the results. The evidence suggested that a reduction in BMI did not alter levels of MDC and TARC, however it is also possible that the sample size was limited to detect smaller magnitudes of effects.
+The effect of BMI on specific platelet-related proteins was explored by extracting the estimates for proteins involved in platelet GO pathways. Both analyses indicated that a reduction in BMI reduces the levels of collagen type III. Collagen activates platelets by binding to receptors such as the GPVI receptor, therefore this reduction may reduce platelet activation[@Maurice2006]. The instrumental variable analysis detected an effect of BMI change on PAFAH, where a reduction in BMI increased levels of PAFAH. This platelet protein was detected in Chapter \@ref(BMI-protein-MR), where higher BMI was associated with reduced levels of PAFAH. Reduced levels of PAFAH has been implicated in increasing the activity of PAF and therefore increasing platelet activation. The comparison across studies for PAFAH and other proteins will be discussed further in Chapter \@ref(Comparison-proteome). There was also evidence that PAI-1 was reduced with a reduction in BMI in the linear regression analysis, with a similar effect estimate in the instrumental variable analysis. PAI-1 is a serine protease inhibitor and inhibits plasminogen activators such as tissue plasminogen activator (tPA), proteins involved in breaking down blood clots. Raised levels of PAI-1 have therefore been linked to increased rates of cardiovascular events[@Morrow2021]. The chemokines utilised in Chapter \@ref(chemokine-platelets), MDC and TARC, were included in the SomaLogic panel and have a known effect in modulating platelet function, therefore were also specifically looked up within the results. The evidence suggested that a reduction in BMI did not alter levels of MDC and TARC, however it is also possible that the sample size was limited to detect smaller magnitudes of effects.
 
-The enrichment results comparing the 144 proteins which were altered with BMI change to the full 4601 proteins tested confirmed this as there was strongest evidence for enrichment of proteins involved in metabolic disease and renal disease, however the effect on CVD did not pass multiple testing adjustment. Pathway enrichment using StringDB also suggested that proteins most altered with BMI change were involved in cytokine-cytokine receptor interactions and complement and coagulation cascades, rather that platelet activation. It could be that the effect on inflammation and coagulation may be more immediate effects, and that changes in platelet activation may either require a more sustained weight loss, or a further reduction in BMI to see effects.
+The enrichment results comparing the 144 proteins which were altered with BMI change to the full 4601 proteins tested confirmed this as there was strongest evidence for enrichment of proteins involved in metabolic disease and renal disease, however the effect on CVD did not pass multiple testing adjustment. Pathway enrichment using StringDB also suggested that proteins most altered with BMI change were involved in cytokine-cytokine receptor interactions and complement and coagulation cascades, rather that platelet activation. It could be that the effect on inflammation and coagulation may be more immediate effects, and that changes in platelet activation may either require a more sustained weight loss, or a further reduction in BMI to see effects. Despite this, the reduction in complement components such as complement factor B could still have an indirect effect on platelet function due to the known cross-talk between platelets and complement[@Peerschke2008].
 
 Limitations from the current analysis therefore include possible protein effects that are not caused by a change in BMI. Despite the use of the treatment group as an instrument in a two stage least squares analysis, the treatment group was also associated with an alteration in other factors: those who were allocated TDR also were taken off any T2D medication and were more likely to achieve remission of T2D. It is possible that the analysis is therefore picking up protein effects that are caused by a change in medication or T2D remission, rather than as a result in loss of fat. Participants would have also lost muscle mass throughout the intervention[@Santanasto2011], therefore it is not certain that effects are attributable to loss of fat. Despite this, there is evidence that in a group of participants with obesity, the majority of weight lost is fat mass[@Backx2016]. Thirdly, BMI decreased by an average of 0.4kg/m^2^ in the control group and by 3.6 kg/m^2^ in the intervention group. As participants started at a mean BMI of 34-35 kg/m^2^, the majority of participants will still have obesity even after the intervention. This may limit protein effects observed, as a certain BMI may need to be reached to see an alteration in protein levels (i.e. the relationship may not be linear). Finally, it is unclear how generalisable results would be to the wider population. It is often the case with diets and caloric restriction that they only result in weight loss short-term and this is likely because the body adapts to the lower intake of calories. Therefore the changes which are seen in levels of proteins may not be so dynamic. The use of bariatric surgery may help to ensure weight loss and the associated changes are sustained.
 
