--- a/index/09-conclusion.Rmd
+++ b/index/09-conclusion.Rmd
@@ -60,7 +60,7 @@ As well as IPC having the potential to be a useful biomarker, the targeted appro
 The BMI and proteome analyses suggested that various plasma proteins could also be biomarkers in patients with obesity who may be at a greater risk of cardiovascular events and metabolic disease. Using MR, various proteins altered by BMI as shown in Chapter \@ref(BMI-protein-MR) have been implicated in disease. For example, in work by Constantinescu et al. (unpublished), analyses suggested that certain proteins altered with BMI may have a causal role in DVT, including INHBC. Other proteins such as SHBG have been implicated in T2D. Proteins such as INHBC and SHBG could therefore be therapeutic targets. Proteins which are altered with weight loss on the plasma proteome also indicates potential proteins which may be have a role in reducing the disease risk associated with weight loss. The comparison across both studies indicates proteins which are altered with BMI in both study designs and therefore may be the most suitable targets for pharmacological intervention.
 
 ## Possible mechanisms of effects
-It is unclear how these associations fit together and whether they are truly part of the same pathway. My hypothesis is that higher BMI alters the circulating composition of proteins. This global change in protein composition exerts effects on other blood cells in the local environment such as platelets. Megakaryocytes which are situated in the bone marrow may respond to this change in protein environment, where there is an increase in proliferation into platelets, therefore raising levels of IPC. A simultaneous reduction in proteins such as PAFAH and IGFBP1, along with increases in other proteins such as Complement C5 would likely lead to greater platelet activation and contribute to the progression of CVD. It is important to note that causality was not explored between protein levels and IPC, therefore it is possible that a change in IPC could lie before protein changes within the pathway. However, the ability of proteins such as the chemokines MDC and TARC to activate platelet, as demonstrated in this thesis, highlights that it may be more likely the protein change is upstream of platelet alterations. A common theme among proteins altered with BMI is that they are proteins which have a key role in regulating the levels of another protein. This is the case for SHBG, IGFBPs and PAFAH. 
+It is unclear how these associations fit together and whether they are truly part of the same pathway. My hypothesis is that higher BMI alters the circulating composition of proteins. This global change in protein composition exerts effects on other blood cells in the local environment such as platelets. Megakaryocytes which are situated in the bone marrow may respond to this change in protein environment, where there is an increase in proliferation into platelets, therefore raising levels of IPC. A simultaneous reduction in proteins such as PAFAH and IGFBP1, along with increases in other proteins such as Complement C5 would likely lead to greater platelet activation and contribute to the progression of CVD. It is important to note that causality was not explored between protein levels and IPC, therefore it is possible that a change in IPC could lie before protein changes within the pathway. However, the ability of proteins such as the chemokines MDC and TARC to activate platelet, as demonstrated in this thesis, highlights that it may be more likely the protein change is upstream of platelet alterations. A common theme among proteins altered with BMI is that they are proteins which have a key role in regulating the levels of another protein. This is the case for SHBG, IGFBPs, PAI-1 and PAFAH. These proteins collectively have been shown to be able to regulate platelet function.
 
 ## Strengths 
 As previously mentioned, this thesis has approached hypotheses using a range of study designs. Integrating clinical studies, basic science, cohort studies and trial data has been crucial to further understand the role of BMI in platelet function. Orthogonal evidence is when findings are replicated more than one study design. This thesis has provided orthogonal evidence such as through use of MR along with a weight loss RCT to determine effects of BMI on the plasma proteome. This is therefore a major strength of the current research. Using a combination of study designs is crucial to determine causal effects.
